# SIQspeak

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  dictate.py  installer.iss  pyproject.toml  requirements.txt  setup.bat  siqspeak.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-installer.yml
docs/plans/: 2026-07-20-context-aware-enhancement.md  2026-07-20-distil-download-retry.md  2026-07-20-local-ai-ui-model-upgrade-design.md  2026-07-20-local-ai-ui-model-upgrade.md  2026-07-21-engineering-grade-enhancer.md  2026-07-22-enhancement-modes.md  2026-07-22-grep-context-retrieval.md
scripts/: create_shortcut.ps1  download_model.py  hf_check.py  hf_login.py
src/siqspeak/: __init__.py  __main__.py  _frozen.py  app.py  config.py  hf_auth.py  hotkey.py  logging_setup.py  state.py  text_processing.py  tray.py
src/siqspeak/audio/: devices.py  recording.py  streaming.py
src/siqspeak/enhancement/: __init__.py  context.py  email.py  (+10 more)
tests/: conftest.py  test_config.py  test_context.py  test_email.py  test_engineering_pipeline.py  test_enhanced_transcription.py  test_enhancement_service.py  test_hardware.py  test_installer.py  test_log_interaction.py  test_log_panel.py  test_model_catalog.py  test_model_manager.py  test_ollama.py  test_overlay_state.py  test_personalization.py  test_prompt.py  test_query.py  test_raw_transcription.py  test_removed_latency_guards.py  test_rendering.py  test_retrieval.py  test_settings_actions.py  test_settings_panel.py  test_skills.py  test_state.py  test_strip_overlap.py  test_terminal.py  test_text_input.py  test_text_processing.py  test_workspace.py
(+16 files in other folders)
